tests/cases/ffi/ok/ffi-c-module.ari
mod libc {
  pub extern "C" fn puts(text: string) -> i32;
}

fn main() -> i64 {
  libc::puts("ffi-c-module-ok");
  return 0;
}

