tests/cases/ffi/errors/extern-invalid-link-name.ari
extern "C" fn bad() -> i64 = "bad-symbol";

fn main() -> i64 {
  return bad();
}

